[package]
name = "lanczos-resampler"
version.workspace = true
edition.workspace = true

[dependencies]
seq-macro = "0.3.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true

[dev-dependencies]
arbitrary = "1.4.2"
arbtest = "0.3.2"
criterion = "0.7.0"
paste = "1.0.15"
rand = "0.9.2"

[workspace]
members = [".", "wasm"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
js-sys = "0.3.83"
lanczos-resampler = { path = ".", version = "0.1.0" }

[lints.rust]
#missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
missing_safety_doc = "deny"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "resample"
harness = false
