[package]
name = "lanczos-resampler"
version = "0.1.0"
edition = "2024"
license = "MIT"
homepage = "https://github.com/igankevich/lanczos-resampler"
repository = "https://github.com/igankevich/lanczos-resampler"
documentation = "https://docs.rs/lanczos-resampler"
readme = "README.md"
description = "Audio resampler for Rust/JS that uses Lanczos filter."
keywords = ["upsampling", "downsampling", "interpolation", "webaudio"]
categories = ["multimedia::audio", "wasm"]
include = ["**/*.rs", "Cargo.toml", "README.md"]

[lib]
crate-type = ["rlib"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
libm = "0.2.15"

[dev-dependencies]
arbitrary = "1.4.2"
arbtest = { git = "https://github.com/igankevich/arbtest", rev = "4bbed7dd53134fae174e73fd91f73ab30dbccad5" }
paste = "1.0.15"
rand = "0.9.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
criterion = "0.7.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.83"
wasm-bindgen = "0.2.106"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
wasm-bindgen-test = "0.3.56"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
missing_safety_doc = "deny"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[package.metadata.wasm-pack.profile.release]
# https://github.com/drager/wasm-pack/issues/1441#issuecomment-2886461752
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[[bench]]
name = "resample"
harness = false

# This is WASM-specific configuration.
[profile.release]
panic = "abort"
lto = true
codegen-units = 1
debug = false
strip = true
opt-level = "s"
