[package]
name = "lanczos-resampler-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.106"
lanczos-resampler.workspace = true
js-sys.workspace = true
console_error_panic_hook = "0.1.7"

[package.metadata.wasm-pack.profile.release]
# https://github.com/drager/wasm-pack/issues/1441#issuecomment-2886461752
#wasm-opt = false
